--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
-  "name": "bikeaddiction",
-  "version": "1.0.0",
-  "description": "Site care vinde biciclete, piese, accesorii si echipamente",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "biciclete",
-    "piese",
-    "accesorii",
-    "echipamente"
-  ],
-  "author": "Vlad Ioan Birsan",
-  "license": "ISC",
-  "dependencies": {
-    "ejs": "^3.1.6",
-    "express": "^4.17.3",
-    "pg": "^8.7.3",
-    "sass": "^1.49.9",
-    "sharp": "^0.30.3"
-  }
+	"name": "bikeaddiction",
+	"version": "1.0.0",
+	"description": "Site care vinde biciclete, piese, accesorii si echipamente",
+	"main": "index.js",
+	"scripts": {
+		"start": "node index.js",
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"keywords": [
+		"biciclete",
+		"piese",
+		"accesorii",
+		"echipamente"
+	],
+	"author": "Vlad Ioan Birsan",
+	"license": "ISC",
+	"engines": {
+		"node": "16.x"
+	},
+	"dependencies": {
+		"ejs": "^3.1.6",
+		"express": "^4.17.3",
+		"express-session": "^1.17.2",
+		"formidable": "^2.0.1",
+		"pg": "^8.7.3",
+		"sass": "^1.49.9",
+		"sharp": "^0.30.3"
+	}
 }
