--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
 		"node": "16.x"
 	},
 	"dependencies": {
-		"ejs": "^3.1.6",
+		"ejs": "^3.0.2",
 		"express": "^4.17.3",
 		"express-session": "^1.17.2",
 		"formidable": "^2.0.1",
+		"nodemailer": "^6.7.3",
 		"pg": "^8.7.3",
 		"sass": "^1.49.9",
 		"sharp": "^0.30.3"
