--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"express-session": "^1.17.2",
 		"formidable": "^2.0.1",
 		"nodemailer": "^6.7.3",
+		"nodemon": "^2.0.16",
 		"pg": "^8.7.3",
 		"sass": "^1.49.9",
 		"sharp": "^0.30.3"
