--- a/package.json
+++ b/package.json
@@ -23,9 +23,14 @@
 		"express": "^4.17.3",
 		"express-session": "^1.17.2",
 		"formidable": "^2.0.1",
+		"html-pdf-node": "^1.0.7",
+		"juice": "^8.0.0",
+		"mongodb": "^4.6.0",
 		"nodemailer": "^6.7.3",
 		"nodemon": "^2.0.16",
 		"pg": "^8.7.3",
+		"qrcode": "^1.5.0",
+		"request": "^2.88.2",
 		"sass": "^1.49.9",
 		"sharp": "^0.30.3"
 	}
