--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"express-session": "^1.17.2",
 		"formidable": "^2.0.1",
 		"html-pdf-node": "^1.0.7",
+		"http": "^0.0.1-security",
 		"juice": "^8.0.0",
 		"mongodb": "^4.6.0",
 		"nodemailer": "^6.7.3",
@@ -32,6 +33,8 @@
 		"qrcode": "^1.5.0",
 		"request": "^2.88.2",
 		"sass": "^1.49.9",
-		"sharp": "^0.30.3"
+		"sharp": "^0.30.3",
+		"socket.io": "^4.5.1",
+		"xml-js": "^1.6.11"
 	}
 }
